src/test/deca/syntax/invalid/created/only_one_value_type/only_INTEGER.deca
// Description :
// Fichier contenant uniquement des nombres entiers
//
// Resultats :
// Lexer -> OK 
// Parser -> Error Ligne 8 : no viable alternative at input '

1793447822
1764961972
220815180 828760383 2129565578	3318799593	1991691893 210613550
982706879
3999856306 897397461
2356500990 1348403571	3531304663
3624140454 1686970675	3208465560 3392347701
752947475
3787873160	1984542532
3586632953
4266573070
6366250
1823543550
3562870525
4172004169	2148898395
4111054979 542323308	3394520402	583215062
337823223	2851258250	2883852250
1390265725 2571113667 4255633207
2705491295 2983537416
2455553102	1942294234	2415727706 3361612575	1683534009 1197062575	179824234 4004392293
4282225568 2683770866
2373816759
3473616593
4270324718
1420803338
3609441531	428979096
40904128 121167766
2580565149 326570417 414621794	4233567731
3455391705 1750522534
3127965858
826912456
732451015 1939585006	2767562412	42677115
247539201
3543011047
3176427314 108733568	2040530759 3313487808	863103145 3675376186
780662707	3715676251 